styled the container and the images

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
    <div class="container">
        <header>
            <input type="text">
-           <button id="search">Search</button>
+           <button id="search"><i class="fas fa-search"></i></button>
        </header>
        <div class="fav-container">
+           <h4>Favorite Meals</h4>
            <ul>
                <li><img src="https://www.themealdb.com/images/media/meals/ldnrm91576791881.jpg" alt="Christmas cake"><span>Christmas cake</span></li>
                <li><img src="https://www.themealdb.com/images/media/meals/hyarod1565090529.jpg" alt="Stamppot"><span>Stamppot</span></li>
