styled the random recipe and favorite meal section

--- a/index.html
+++ b/index.html
@@ -15,22 +15,23 @@
            <button id="search"><i class="fas fa-search"></i></button>
        </header>
        <div class="fav-container">
-           <h4>Favorite Meals</h4>
-           <ul>
+           <h3>Favorite Meals</h3>
+           <ul class="fav-meals">
                <li><img src="https://www.themealdb.com/images/media/meals/ldnrm91576791881.jpg" alt="Christmas cake"><span>Christmas cake</span></li>
                <li><img src="https://www.themealdb.com/images/media/meals/hyarod1565090529.jpg" alt="Stamppot"><span>Stamppot</span></li>
-               <li><img src="https://www.themealdb.com/images/media/meals/xxyupu1468262513.jpg" alt="Honey Teriyaki Salmon"><span>Honey Teriyaki Salmon</span></li>
+               <li><img src="https://www.themealdb.com/images/media/meals/xxyupu1468262513.jpg" alt="Honey Teriyaki Salmon"><span>Teriyaki Salmon</span></li>
+               <li><img src="https://www.themealdb.com/images/media/meals/xqusqy1487348868.jpg" alt=""><span>Fried Chicken</span></li>
            </ul>
        </div>
        <div class="meals">
-           <span class="random">Random Recipe</span>
            <div class="meal">
                <div class="meal-header">
+                   <span class="random">Random Recipe</span>
                    <img src="https://www.themealdb.com/images/media/meals/xqusqy1487348868.jpg" alt="">
                </div>
                <div class="meal-body">
                    <h4>Kentucky Fried Chicken</h4>
-                   <button><i class="far fa-heart"></i></button>
+                   <button class="fav-btn"><i class="fas fa-heart"></i></button>
                </div>
            </div>
        </div>
