--- a/index.html
+++ b/index.html
@@ -23,17 +23,8 @@
                <li><img src="https://www.themealdb.com/images/media/meals/xqusqy1487348868.jpg" alt=""><span>Fried Chicken</span></li>
            </ul>
        </div>
-       <div class="meals">
-           <div class="meal">
-               <div class="meal-header">
-                   <span class="random">Random Recipe</span>
-                   <img src="https://www.themealdb.com/images/media/meals/xqusqy1487348868.jpg" alt="">
-               </div>
-               <div class="meal-body">
-                   <h4>Kentucky Fried Chicken</h4>
-                   <button class="fav-btn"><i class="fas fa-heart"></i></button>
-               </div>
-           </div>
+       <div class="meals" id="meals">
+           
        </div>
    </div>
     
